test/expected/explain_sc16.out
explain signed char16_t x
        ^
9: error: "signed char16_t" is illegal for built-in type
